# Re-DeepResearcher

./: .gitignore  Makefile  README.md  pyproject.toml  pyvenv.cfg  setup.py
.github/workflows/: tests.yml
model/Qwen3.5-4B-sft-unsloth/: README.md  adapter_config.json  chat_template.jinja  config.json  train_results.json  trainer_state.json
model/Qwen3.5-4B-sft-unsloth/checkpoint-1000/: README.md  scheduler.pt  trainer_state.json
model/Qwen3.5-4B-sft-unsloth/checkpoint-1125/: adapter_config.json  trainer_state.json
recipes/: README.md
recipes/DeepSeek-R1-Distill-Qwen-1.5B/grpo/: config_demo.yaml
recipes/OlympicCoder-32B/sft/: config_v00.00.yaml
recipes/OlympicCoder-7B/sft/: config_v00.00.yaml
recipes/OpenR1-Distill-7B/sft/: config_distill.yaml
recipes/Qwen2.5-1.5B-Instruct/grpo/: config_demo.yaml  config_demo_code.yaml  config_demo_code_ioi.yaml
recipes/Qwen2.5-1.5B-Instruct/gspo/: config_demo.yaml
recipes/Qwen2.5-7B-Instruct/sft/: config_local.yaml
recipes/Qwen2.5-Coder-7B-Instruct/grpo/: config_codeforces.yaml
recipes/Qwen3.5-27B-Instruct/sft/: config_local.yaml
recipes/Qwen3.5-4B/gspo/: config_carl_moa_cuda.yaml
recipes/Qwen3.5-4B/sft/: config_unsloth_cuda.yaml
recipes/Qwen3.5-9B/sft/: config.yaml
recipes/accelerate_configs/: ddp.yaml  fsdp.yaml
scripts/: benchmark_e2b.py  cot_data.py  data.py  decontaminate.py  diagnose_rocm.py  eval_gspo_format.py  fix_synthetic_cot.py  generate_reasoning.py  json_to_parquet.py  prepare_gspo_sft_parquet.py  run_qwen2.5_sft.ps1  run_qwen2.5_sft.sh  run_qwen3.5_sft.sh  sample_fineweb.py  sample_parquet_subsets.py  sanity_check_parquet.py  upload_details.py
slurm/: evaluate.slurm  train.slurm
slurm/piston/: README.md
src/agent/: __init__.py  cli.py  llm.py  react_agent.py
src/agent/prompts/: __init__.py  react_prompt.py
src/agent/tools/: __init__.py  calculator.py  fs_tools.py
src/open_r1/: configs.py  grpo.py  rewards.py  sft.py
src/open_r1/utils/: __init__.py  cot_data.py  data.py  evaluation.py  hf_download_utils.py  model_hub_resolver.py  model_utils.py  unsloth_utils.py
src/open_r1/utils/competitive_programming/: __init__.py  cf_scoring.py  code_patcher.py  ioi_scoring.py  ioi_utils.py  piston_client.py  utils.py
src/rl/: configs.py  grpo.py  gspo.py  rewards.py  sft.py
src/rl/utils/: data.py  hf_download_utils.py  model_hub_resolver.py  model_utils.py  unsloth_utils.py
tests/utils/: test_data.py
unsloth_compiled_cache/: UnslothCPOTrainer.py  UnslothKTOTrainer.py  UnslothORPOTrainer.py
