[project]
name = "re-deepreasearcher"
version = "0.1.0"
description = "Fine-tuning utilities (Qwen3.5 + Unsloth + CUDA)"
requires-python = ">=3.11"
dependencies = [
  "accelerate>=1.4.0",
  "datasets>=3.2.0",
  "einops>=0.8.0",
  "huggingface-hub[cli,hf_xet]>=0.31.0,<2.0",
  "openai>=2.32.0",
  "packaging>=23.0",
  "pandas>=3.0.2",
  "peft>=0.14.0",
  "pyarrow>=23.0.1",
  "python-dotenv>=1.2.2",
  "safetensors>=0.4.0",
  "sentencepiece>=0.2.0",
  "transformers>=4.55.0",
  "trl>=0.23.0",
  "unsloth>=2025.2",
  "unsloth_zoo",
  "wandb>=0.19.1",
]

[project.optional-dependencies]
# Install a CUDA-enabled torch build separately (recommended), then:
#   pip install -e ".[unsloth_cuda]"
unsloth = [
  "unsloth>=2025.2",
  "unsloth_zoo",
]

# Recommended for Unsloth + 4bit/QLoRA on CUDA GPUs (e.g. RTX 5090).
# Note: install a matching CUDA-enabled torch wheel first.
unsloth_cuda = [
  "unsloth>=2025.2",
  "unsloth_zoo",
  "bitsandbytes>=0.43.0",
]

# If you use a SOCKS proxy (ALL_PROXY/HTTPS_PROXY with socks5://),
# install this extra so huggingface_hub/httpx can route traffic correctly.
proxy_socks = [
  "httpx[socks]>=0.27.0",
]

dev = [
  "pytest",
  "parameterized>=0.9.0",
  "ruff>=0.9.0",
]

# Simple ReAct agent demo (CLI) via LangChain.
langchain = [
  "langchain>=0.2.0",
  "langchain-openai>=0.1.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"
